[package]
name = "rgbfusion"
version = "0.1.0"
description = "RGB CLI tool"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/rgbfusion.git"
license = "GPL-3.0+"
readme = "README.md"
edition = "2018"

[dependencies]
clap = { version = "4.1.8", features = ["cargo", "derive"] }
hidapi = "2.2.0"
bytes = "1.4.0"
